# C4.5-Decision-Trees

./: .gitignore  DecisionTree.py  DecisionTreeClassifier.py  README.md  attributes.py  checking.py  decision_tree_refactor.py  exceptions.py  leaf_classes.py  nodes.py  predicting.py  predictor.py  pyproject.toml  splitting.py  training.py  traininghandler.py
docs/source/: c4dot5.rst  conf.py  index.rst  inference.rst  installation.rst  modules.rst  quickstart.rst  rules_extraction.rst  training.rst  visualization.rst
src/c4dot5/: DecisionTree.py  DecisionTreeClassifier.py  attributes.py  checking.py  exceptions.py  importing.py  nodes.py  predictor.py  rules_extractor.py  splitting.py  training.py  traininghandler.py  visualizer.py  visualizing.py
src/data_example/: training_dataset.csv
tests/: test_classifier.py  test_decision_node.py  test_decision_node_boolean.py  test_decision_node_categorical.py  test_decision_node_continuous.py  test_decision_tree.py  test_leaf_node.py  test_nodes.py  test_prediction.py  test_training.py  test_training_unknown_attributes.py  test_visualizer.py  tests_decision_tree.py
