[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c4dot5-decision-tree"
version = "1.0.0"
description = "Train a decision tree using the C4.5 algorithm by Quinlan"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["decision-tree", "machine-learning", "C4.5"]
dependencies = [
    "numpy",
    "pandas",
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

#[project.urls]
#Homepage = "https://github.com/piepor/reader"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

